--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.cleanarchitecture">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.cleanarchitecture"
+    tools:ignore="MissingLeanbackLauncher">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-feature
+        android:name="android.software.leanback"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
 
     <application
+        android:name=".MainActivity"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CleanArchitecture">
-        <activity android:name=".MainActivity">
+        <activity android:name=".presentation.detailphoto.PhotoDetailActivity"
+            android:theme="@style/Theme.CleanArchitecture.NoActionBar">
+        </activity>
+
+        <activity android:name=".presentation.gallery.GalleryActivity"
+            android:theme="@style/NoTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
-    <uses-feature android:name="android.software.leanback"
-        android:required="false"/>
-
-    <uses-feature android:name="android.hardware.touchscreen"
-        android:required="false" />
-
 
 </manifest>
